--- a/estilos.css
+++ b/estilos.css
@@ -1,16 +1,24 @@
 body
 {
-    color: blue;
-    background-color: chocolate;
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    text-shadow: aquamarine;
-
-
+    font-size: 16px;
+    margin: 1;
+    padding: 0;
+    
 }
 
-menu
+#container
 {
-    color: darkgreen;
-    text-align: center;
+    width: 50%;
+    padding: 1em;
+    text-align: left;
+    border: 4px solid rgb(196, 122, 122);
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
