--- a/estilos.css
+++ b/estilos.css
@@ -9,9 +9,27 @@ body
     
 }
 
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 5px 30px 0px rgba(0,0,0,0,75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline 
+{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+
 #container
 {
-    width: 50%;
+    width: 70%;
     padding: 1em;
     text-align: left;
     border: 4px solid rgb(196, 122, 122);
