--- a/estilos.css
+++ b/estilos.css
@@ -2,8 +2,8 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
     margin: 1;
     padding: 0;
     
